feat(安全合规): 完成第一天安全合规改造
将数据库、邮箱、JWT、Redis、CORS 和第三方服务配置改为环境变量驱动，避免明文密钥和默认密码进入运行配置。

收紧用户、AI 面试、云知识库和管理端接口权限，补充测试环境配置，确保后端测试不依赖本地真实数据库凭据。

新增隐私说明页面、隐私文档和部署环境变量说明，并清理前端调试日志与本地硬编码 API 地址。

注意：前端构建仍存在既有大 chunk 警告，后续按 Day 4 继续拆包优化。